--- a/libs/spandsp/src/msvc/make_cielab_luts.2012.vcxproj
+++ b/libs/spandsp/src/msvc/make_cielab_luts.2012.vcxproj
@@ -54,7 +54,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetPath)" &gt;"$(ProjectDir)..\make_cielab_luts.h"</Command>
+      <Command>"$(TargetPath)" &gt;"$(ProjectDir)..\cielab_luts.h"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
