--- a/src/mod/xml_int/mod_xml_rpc/mod_xml_rpc.2010.vcxproj
+++ b/src/mod/xml_int/mod_xml_rpc/mod_xml_rpc.2010.vcxproj
@@ -133,6 +133,12 @@
     <ClCompile Include="ws.c" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\libs\win32\openssl\libeay32.2010.vcxproj">
+      <Project>{d331904d-a00a-4694-a5a3-fcff64ab5dbe}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\libs\win32\openssl\ssleay32.2010.vcxproj">
+      <Project>{b4b62169-5ad4-4559-8707-3d933ac5db39}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\libs\win32\xmlrpc-c\abyss.2010.vcxproj">
       <Project>{d2396dd7-7d38-473a-abb7-6f96d65ae1b9}</Project>
     </ProjectReference>
