--- a/src/mod/xml_int/mod_xml_rpc/mod_xml_rpc.2012.vcxproj
+++ b/src/mod/xml_int/mod_xml_rpc/mod_xml_rpc.2012.vcxproj
@@ -137,6 +137,12 @@
     <ClCompile Include="ws.c" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\libs\win32\openssl\libeay32.2010.vcxproj">
+      <Project>{d331904d-a00a-4694-a5a3-fcff64ab5dbe}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\libs\win32\openssl\ssleay32.2010.vcxproj">
+      <Project>{b4b62169-5ad4-4559-8707-3d933ac5db39}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\libs\win32\openssl\libeay32.2012.vcxproj">
       <Project>{d331904d-a00a-4694-a5a3-fcff64ab5dbe}</Project>
     </ProjectReference>
