--- a/libs/spandsp/src/spandsp.h.in
+++ b/libs/spandsp/src/spandsp.h.in
@@ -48,6 +48,7 @@
 #include <tiffio.h>
 
 #include <spandsp/telephony.h>
+#include <spandsp/alloc.h>
 #include <spandsp/fast_convert.h>
 #include <spandsp/logging.h>
 #include <spandsp/complex.h>
