FS-9664: mod_amr: add AMR NB transcoding capability in bandwidth-efficient mode. Tested with VOLTE devices.

--- a/src/mod/codecs/mod_amr/Makefile.am
+++ b/src/mod/codecs/mod_amr/Makefile.am
@@ -1,20 +1,24 @@
 include $(top_srcdir)/build/modmake.rulesam
 MODNAME=mod_amr
-
 AMR_DIR=$(switch_srcdir)/libs/amr
 AMR_BUILDDIR=$(switch_builddir)/libs/amr
 AMR_A=$(AMR_BUILDDIR)/libamr.a
 
 mod_LTLIBRARIES = mod_amr.la
-mod_amr_la_SOURCES  = mod_amr.c
+if HAVE_AMR
+mod_amr_la_SOURCES  = mod_amr.c bitshift.c amr_be.c
+else
+mod_amr_la_SOURCES  = mod_amr.c 
+endif
 mod_amr_la_CFLAGS   = $(AM_CFLAGS)
 mod_amr_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
 mod_amr_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
 
 if HAVE_AMR
-BUILT_SOURCES= $(AMR_A)
-mod_amr_la_CFLAGS += -I$(AMR_DIR)
-mod_amr_la_LIBADD += $(AMR_A)
+# install AMR library opencore-amrnb (check README)
+mod_amr_la_CFLAGS += -I/usr/include/opencore-amrnb
+mod_amr_la_LIBADD += -lopencore-amrnb
+mod_amr_la_CFLAGS += 
 else
 mod_amr_la_CFLAGS += -DAMR_PASSTHROUGH
 endif
