--- a/configure.ac
+++ b/configure.ac
@@ -1288,6 +1288,11 @@ PKG_CHECK_MODULES([LIBPNG], [libpng >= 1.6.16],[
 PKG_CHECK_MODULES([FREETYPE], [freetype2 >= 2.4.9],[
   AM_CONDITIONAL([HAVE_FREETYPE],[true])],[
   AC_MSG_RESULT([no]); AM_CONDITIONAL([HAVE_FREETYPE],[false])])
+
+PKG_CHECK_MODULES([GUMBO], [gumbo >= 0.10.1],[
+  AM_CONDITIONAL([HAVE_GUMBO],[true])],[
+  AC_MSG_RESULT([no]); AM_CONDITIONAL([HAVE_GUMBO],[false])])
+
 PKG_CHECK_MODULES([SQLITE], [sqlite3 >= 3.6.20])
 PKG_CHECK_MODULES([CURL], [libcurl >= 7.19])
 PKG_CHECK_MODULES([PCRE], [libpcre >= 7.8])
