Add raven logger module
FS-9744 --resolve

--- a/configure.ac
+++ b/configure.ac
@@ -1887,6 +1887,7 @@ AC_CONFIG_FILES([Makefile
 		src/mod/loggers/mod_graylog2/Makefile
 		src/mod/loggers/mod_logfile/Makefile
 		src/mod/loggers/mod_syslog/Makefile
+		src/mod/loggers/mod_raven/Makefile
 		src/mod/say/mod_say_de/Makefile
 		src/mod/say/mod_say_en/Makefile
 		src/mod/say/mod_say_es/Makefile
