--- a/libs/libks/test/Makefile.am
+++ b/libs/libks/test/Makefile.am
@@ -54,6 +54,11 @@ testdht_SOURCES = testdht.c tap.c
 testdht_CFLAGS = $(AM_CFLAGS)
 testdht_LDADD = $(TEST_LDADD)
 
+check_PROGRAMS += testdht2
+testdht2_SOURCES = testdht2.c tap.c
+testdht2_CFLAGS = $(AM_CFLAGS)
+testdht2_LDADD = $(TEST_LDADD)
+
 check_PROGRAMS += testdht_net
 testdht_net_SOURCES = testdht-net.c tap.c
 testdht_net_CFLAGS = $(AM_CFLAGS)
