FS-9798 [mod_v8] Implement native PostgreSQL in JavaScript by adding a Database Handler (DBH) class

--- a/src/mod/languages/mod_v8/Makefile.am
+++ b/src/mod/languages/mod_v8/Makefile.am
@@ -80,6 +80,7 @@ mod_v8_la_SOURCES  = \
 	src/jsmain.cpp \
 	src/jsbase.cpp \
 	src/fscoredb.cpp \
+	src/fsdbh.cpp \
 	src/fscurl.cpp \
 	src/fsdtmf.cpp \
 	src/fsevent.cpp \
