FS-9825: Added AMR-WB transcoding capabilities (in both Bandwidth Efficient and Octet Aligned modes)

--- a/src/mod/codecs/mod_amrwb/Makefile.am
+++ b/src/mod/codecs/mod_amrwb/Makefile.am
@@ -1,20 +1,21 @@
 include $(top_srcdir)/build/modmake.rulesam
 MODNAME=mod_amrwb
 
-AMRWB_DIR=$(switch_srcdir)/libs/amrwb
-AMRWB_BUILDDIR=$(switch_builddir)/libs/amrwb
-AMRWB_A=$(AMRWB_BUILDDIR)/libamrwb.a
-
 mod_LTLIBRARIES = mod_amrwb.la
-mod_amrwb_la_SOURCES  = mod_amrwb.c
+if HAVE_AMRWB
+mod_amrwb_la_SOURCES  = mod_amrwb.c bitshift.c amrwb_be.c
+else
+mod_amrwb_la_SOURCES  = mod_amrwb.c 
+endif
+
 mod_amrwb_la_CFLAGS   = $(AM_CFLAGS)
 mod_amrwb_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
 mod_amrwb_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
 
 if HAVE_AMRWB
-BUILT_SOURCES= $(AMRWB_A)
-mod_amrwb_la_CFLAGS += -I$(AMRWB_DIR)
-mod_amrwb_la_LIBADD += $(AMRWB_A)
+# install AMRWB libraries:  opencore-amrwb (decoder) and vo-amrwbenc (encoder)  - check README
+mod_amrwb_la_CFLAGS += $(AMRWB_CFLAGS) 
+mod_amrwb_la_LIBADD += $(AMRWB_LIBS) 
 else
 mod_amrwb_la_CFLAGS += -DAMRWB_PASSTHROUGH
 endif
