FS-9775: Removed building of old dht code, renamed new dht code from dht2 to dht

--- a/libs/libks/test/Makefile.am
+++ b/libs/libks/test/Makefile.am
@@ -49,30 +49,30 @@ testwebsock_SOURCES = testwebsock.c tap.c
 testwebsock_CFLAGS = $(AM_CFLAGS)
 testwebsock_LDADD = $(TEST_LDADD)
 
-check_PROGRAMS += testdht
-testdht_SOURCES = testdht.c tap.c
-testdht_CFLAGS = $(AM_CFLAGS)
-testdht_LDADD = $(TEST_LDADD)
+#check_PROGRAMS += testdht
+#testdht_SOURCES = testdht.c tap.c
+#testdht_CFLAGS = $(AM_CFLAGS)
+#testdht_LDADD = $(TEST_LDADD)
 
 check_PROGRAMS += testdht2
 testdht2_SOURCES = testdht2.c tap.c
 testdht2_CFLAGS = $(AM_CFLAGS)
 testdht2_LDADD = $(TEST_LDADD)
 
-check_PROGRAMS += testdht_net
-testdht_net_SOURCES = testdht-net.c tap.c
-testdht_net_CFLAGS = $(AM_CFLAGS)
-testdht_net_LDADD = $(TEST_LDADD)
+#check_PROGRAMS += testdht_net
+#testdht_net_SOURCES = testdht-net.c tap.c
+#testdht_net_CFLAGS = $(AM_CFLAGS)
+#testdht_net_LDADD = $(TEST_LDADD)
 
-check_PROGRAMS += testdht_msg
-testdht_msg_SOURCES = testdht-msg.c tap.c
-testdht_msg_CFLAGS = $(AM_CFLAGS)
-testdht_msg_LDADD = $(TEST_LDADD)
+#check_PROGRAMS += testdht_msg
+#testdht_msg_SOURCES = testdht-msg.c tap.c
+#testdht_msg_CFLAGS = $(AM_CFLAGS)
+#testdht_msg_LDADD = $(TEST_LDADD)
 
-check_PROGRAMS += dht_example
-dht_example_SOURCES = dht-example.c
-dht_example_CFLAGS = $(AM_CFLAGS)
-dht_example_LDADD = $(abs_top_builddir)/libks.la $(openssl_LIBS) -ledit -lpthread
+#check_PROGRAMS += dht_example
+#dht_example_SOURCES = dht-example.c
+#dht_example_CFLAGS = $(AM_CFLAGS)
+#dht_example_LDADD = $(abs_top_builddir)/libks.la $(openssl_LIBS) -ledit -lpthread
 
 #check_PROGRAMS += libtorrent_example
 #libtorrent_example_SOURCES = libtorrent-example.c
